Add shipment tracking section in index.html
Added a tracking section with input and button for shipment tracking.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
       <div class="card">📦 Warehousing</div>
     </div>
   </section>
+<!-- TRACKING -->
+<section id="track" class="track">
+  <h2>Track Your Shipment</h2>
+  <p>Enter your tracking number to check shipment status.</p>
 
+  <div class="track-box">
+    <input type="text" id="trackingInput" placeholder="Enter tracking number">
+    <button onclick="track()">Track</button>
+    <p id="result"></p>
+  </div>
+</section>
   <!-- TRACKING -->
   <section id="track" class="track">
     <h2>Track Your Shipment</h2>
