--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </section>
 
   <!-- SERVICES -->
-  <section id="services" class="services">
+  <section id="services" class="fade-in">
     <h2>Our Services</h2>
     <div class="service-grid">
       <div class="card">🚢 Sea Freight</div>
@@ -70,7 +70,7 @@
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="contact">
+  <section id="contact" class="contact fade-in">
     <h2>Contact Us</h2>
     <p>Email: support@globallinklogistics.com</p>
     <p>Phone: +34 600 000 000</p>
