Add hero section to index.html
Added a hero section with a title, description, and call-to-action button.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body>
 
   <!-- NAVBAR -->
+  <header class="hero fade-in">
+  <h1>Global Logistics Solutions You Can Trust</h1>
+  <p>Fast, secure, and reliable shipping services for businesses and individuals worldwide.</p>
+  <a href="#contact" class="cta-btn">Get a Free Quote</a>
+</header>
   <nav class="navbar">
     <div class="logo">GlobalLink Logistics</div>
     <ul>
