Revise services and contact sections in index.html

--- a/index.html
+++ b/index.html
@@ -37,15 +37,25 @@
   </section>
 
   <!-- SERVICES -->
-  <section id="services" class="fade-in">
-    <h2>Our Services</h2>
-    <div class="service-grid">
-      <div class="card">🚢 Sea Freight</div>
-      <div class="card">✈️ Air Freight</div>
-      <div class="card">🚚 Road Transport</div>
-      <div class="card">📦 Warehousing</div>
-    </div>
-  </section>
+  <section id="services" class="services fade-in">
+  <h2>Our Services</h2>
+  <ul>
+    <li>📦 International Freight & Cargo Shipping</li>
+    <li>🚚 Domestic & Express Delivery</li>
+    <li>🧾 Customs Clearance & Documentation</li>
+    <li>📍 Real-Time Shipment Tracking</li>
+    <li>🏢 Business & E-commerce Logistics</li>
+  </ul>
+</section>
+ <section class="fade-in">
+  <h2>Why Choose GlobalLink Logistics?</h2>
+  <ul>
+    <li>✔ On-time delivery guarantee</li>
+    <li>✔ Transparent pricing</li>
+    <li>✔ Dedicated customer support</li>
+    <li>✔ Global shipping network</li>
+  </ul>
+</section> 
 <!-- TRACKING -->
 <section id="track" class="track">
   <h2>Track Your Shipment</h2>
@@ -75,12 +85,12 @@
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="contact fade-in">
-    <h2>Contact Us</h2>
-    <p>Email: support@globallinklogistics.com</p>
-    <p>Phone: +34 600 000 000</p>
-  </section>
-
+ <section id="contact" class="contact fade-in">
+  <h2>Get a Free Quote</h2>
+  <p>Email us with your shipment details and we’ll respond within 24 hours.</p>
+  <p><strong>Email:</strong> support@globallinklogistics.com</p>
+  <p><strong>Phone:</strong> +34 600 000 000</p>
+</section>
   <footer>
     © 2025 GlobalLink Logistics. All rights reserved.
   </footer>
