Add WhatsApp chat link to index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         "Tracking system coming soon.";
     }
   </script>
-
+<a href="https://wa.me/+447943248575" 
+   class="whatsapp-float" 
+   target="_blank" 
+   aria-label="Chat on WhatsApp">
+   💬
+</a>
 </body>
 </html>
