Remove tracking section and update contact details
Removed tracking section and updated contact information.

--- a/index.html
+++ b/index.html
@@ -67,13 +67,6 @@
     <p id="result"></p>
   </div>
 </section>
-  <!-- TRACKING -->
-  <section id="track" class="track">
-    <h2>Track Your Shipment</h2>
-    <input type="text" placeholder="Enter Tracking Number" />
-    <button onclick="track()">Track</button>
-    <p id="result"></p>
-  </section>
 
   <!-- ABOUT -->
   <section id="about" class="about">
@@ -88,8 +81,8 @@
  <section id="contact" class="contact fade-in">
   <h2>Get a Free Quote</h2>
   <p>Email us with your shipment details and we’ll respond within 24 hours.</p>
-  <p><strong>Email:</strong> support@globallinklogistics.com</p>
-  <p><strong>Phone:</strong> +34 600 000 000</p>
+  <p><strong>Email:</strong> globallinklogistics21@gmail.com</p>
+  <p><strong>Phone:</strong> +447943248575</p>
 </section>
   <footer>
     © 2025 GlobalLink Logistics. All rights reserved.
