Remove checkmarks from feature list in index.html

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
  <section class="fade-in">
   <h2>Why Choose GlobalLink Logistics?</h2>
   <ul>
-    <li>✔ On-time delivery guarantee</li>
-    <li>✔ Transparent pricing</li>
-    <li>✔ Dedicated customer support</li>
-    <li>✔ Global shipping network</li>
+    <li> On-time delivery guarantee</li>
+    <li> Transparent pricing</li>
+    <li> Dedicated customer support</li>
+    <li> Global shipping network</li>
   </ul>
 </section> 
 <!-- TRACKING -->
