--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
   <h2>Track Your Shipment</h2>
   <p>Enter your tracking number to check shipment status.</p>
 
-  <div class="track-box">
-    <input type="text" id="trackingInput" placeholder="Enter tracking number">
-    <button onclick="track()">Track</button>
-    <p id="result"></p>
-  </div>
+<div class="track-box">
+  <input type="text" id="trackingInput" placeholder="Enter tracking number">
+  <button onclick="track()">Track</button>
+</div>
+
+<div id="result" class="track-result"></div> 
 </section>
 
   <!-- ABOUT -->
