--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <body>
 
   <!-- NAVBAR -->
-  <header class="hero fade-in">
-  <h1>Global Logistics Solutions You Can Trust</h1>
-  <p>Fast, secure, and reliable shipping services for businesses and individuals worldwide.</p>
-  <a href="#contact" class="cta-btn">Get a Free Quote</a>
+  <header class="header">
+  <div class="container brand">
+    <img src="logo.svg" alt="GlobalLink Logistics Logo">
+    <p>Reliable Shipping & Tracking Solutions Worldwide</p>
+  </div>
 </header>
   <nav class="navbar">
     <div class="logo">GlobalLink Logistics</div>
