Add hero section with logistics information
Added a hero section to showcase global logistics services.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
+<!-- HERO SECTION -->
+<section id="home" class="hero">
+  <div class="hero-content">
+    <h1>Global Logistics & Freight Solutions</h1>
+    <p>
+      Reliable air, sea, and land shipping services connecting businesses
+      worldwide with speed, security, and precision.
+    </p>
 
+    <div class="hero-buttons">
+      <a href="#contact" class="btn-primary">Request a Quote</a>
+      <a href="#track" class="btn-secondary">Track Shipment</a>
+    </div>
+
+    <div class="trust-badges">
+      <span>✓ Worldwide Coverage</span>
+      <span>✓ Real-Time Tracking</span>
+      <span>✓ 24/7 Support</span>
+    </div>
+  </div>
+</section>
   <!-- HERO -->
   <section class="hero">
     <h1>Reliable Global Shipping Solutions</h1>
