Add services section for logistics offerings
Added a new services section to highlight logistics offerings.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,44 @@
     </div>
   </div>
 </section>
+  <!-- SERVICES SECTION -->
+<section id="services" class="services">
+  <div class="container">
+    <h2>Our Logistics Services</h2>
+
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>Air Freight</h3>
+        <p>Fast and secure air cargo solutions for time-critical shipments.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Sea Freight</h3>
+        <p>Cost-effective ocean freight services for global transportation.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Road Transport</h3>
+        <p>Reliable land transportation across regions and borders.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Warehousing</h3>
+        <p>Secure storage, inventory management, and distribution services.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Customs Clearance</h3>
+        <p>Expert handling of customs documentation and compliance.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Supply Chain Solutions</h3>
+        <p>End-to-end logistics solutions tailored for your business.</p>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- HERO -->
   <section class="hero">
     <h1>Reliable Global Shipping Solutions</h1>
