--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>GlobalLink Logistics</title>
 
+  <link rel="stylesheet" href="style.css">
+
   <style>
     .hidden {
       display: none;
